todo list updated

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ TO DO
 - Show accounts with shell=nologin separately
 - cmdline switch to suppress UID_MAX check
 - Check and notify if /etc/nologin is in effect
+- Warn if a user's password is blank/not set
 
 WISH LIST
 - If login.defs not found OR UID_MIN not found,
