--- a/README
+++ b/README
@@ -2,15 +2,12 @@ Project Alias: lusers
 Project Name: List (login-capable) Linux Users
 Project Description:
 
-This tiny project came into existence solely with a
-simple aim of printing non-system users on a 
-linux users. So it does now.
+This tiny project simply aims to print non-system users on a linux system.
 
 Refer to TODO/Wish list for more ideas
 on where this is going.
 
 EXTRA NOTE:
-Project uses C++ only to get some practice
-of that language. What this project does
-can be done much easily in other scripting 
-languages.
+Project uses C++ to get some practice of the language. 
+What this project does can be done much easily using 
+other scripting languages.
